src/objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>Business_Group__c</fullName>
        <inlineHelpText>Select EEC or BG to see available demos and sessions need to be planned for the event. Those are planned in more detail level in sessions (related list under the track).</inlineHelpText>
        <label>EEC / Business Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EEC</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>FN</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>ION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Takeaways__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Takeaways</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used if you wish to build a web integration that will publish track info on your website.</description>
        <label>Publish to Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sessions_to_be_planned__c</fullName>
        <inlineHelpText>Select demos and sessions to be planned for the event. More detail level demo/session planning is done in session (related list under track). NOTE! Max 4 EEC demos per event.</inlineHelpText>
        <label>Demos / Sessions to be planned</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Business_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MN demo 1</fullName>
                </value>
                <value>
                    <fullName>MN demo 2</fullName>
                </value>
                <value>
                    <fullName>MS demo 3</fullName>
                </value>
                <value>
                    <fullName>FN demo 1</fullName>
                </value>
                <value>
                    <fullName>FN demo 2</fullName>
                </value>
                <value>
                    <fullName>FS demo 3</fullName>
                </value>
                <value>
                    <fullName>GS demo 1</fullName>
                </value>
                <value>
                    <fullName>GS demo 2</fullName>
                </value>
                <value>
                    <fullName>GS demo 3</fullName>
                </value>
                <value>
                    <fullName>5G industrial automation / cooperative robots</fullName>
                </value>
                <value>
                    <fullName>5G massive connectivity</fullName>
                </value>
                <value>
                    <fullName>5G multi-connectivity</fullName>
                </value>
                <value>
                    <fullName>5G network slicing</fullName>
                </value>
                <value>
                    <fullName>5G network operation</fullName>
                </value>
                <value>
                    <fullName>5G VR live experience on AirScale</fullName>
                </value>
                <value>
                    <fullName>AirFrame Data Center Solution</fullName>
                </value>
                <value>
                    <fullName>AirSclale Radio Access</fullName>
                </value>
                <value>
                    <fullName>AirScale Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>CEM analytics for life</fullName>
                </value>
                <value>
                    <fullName>Cloud Packet Core</fullName>
                </value>
                <value>
                    <fullName>CloudRAN</fullName>
                </value>
                <value>
                    <fullName>Cognitive Service Platform AVA</fullName>
                </value>
                <value>
                    <fullName>Compact Network</fullName>
                </value>
                <value>
                    <fullName>Contextual communications with IMS APIs</fullName>
                </value>
                <value>
                    <fullName>Converged CEM</fullName>
                </value>
                <value>
                    <fullName>Core for IoT and Connectivity Management Platform</fullName>
                </value>
                <value>
                    <fullName>Customer Experience Index CEI</fullName>
                </value>
                <value>
                    <fullName>Data Center Services</fullName>
                </value>
                <value>
                    <fullName>Data Monetization Services</fullName>
                </value>
                <value>
                    <fullName>Dynamic Experience Management DEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_Category__c</fullName>
        <label>Track Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category #1</fullName>
                </value>
                <value>
                    <fullName>Category #2</fullName>
                </value>
                <value>
                    <fullName>Category #3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Track Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Track_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This person is normally from Customer Engagement team. He/she drives needed actions to prepare presentation materials for agreed sessions.</inlineHelpText>
        <label>Track Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Track_Status__c</fullName>
        <inlineHelpText>Draft - There is at least one session with &quot;Pending&quot;- status.
Approved - All planned session approved.</inlineHelpText>
        <label>Track Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Track Website</label>
        <type>Url</type>
    </fields>
    <label>Track</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>